--- a/Sublime Text.html
+++ b/Sublime Text.html
@@ -1,3 +1,16 @@
-<h1>Hey, I'm a big heading!</h1>
-<p>Hey, I'm a paragraph.</p>
-<a href="https://google.com" target="_blank">click me!</a>
+<!DOCTYPE html>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page</title>
+</head>
+<body>
+	<h1>Hey, I'm a big heading!</h1>
+	<p>Hey, I'm a <b>paragraph.</b></p>
+	<a href="https://google.com" target="_blank" title="let's go to google">click me!</a>
+	<p>My name is:<br>
+	Kitty Cat</p>
+	<img src="https://upload.wikimedia.org/wikipedia/commons/6/66/An_up-close_picture_of_a_curious_male_domestic_shorthair_tabby_cat.jpg">
+
+</body>
+</html>
