--- a/test.html
+++ b/test.html
@@ -5,8 +5,8 @@
 	<title>Test page</title>
 </head>
 <body>
-	<h1>Jonas ist ein Dödel/h1>
-	<p>Hey, I'm a <b>paragraph.</b></p>
+	<h1>Jonas ist ein Dödel</h1>
+	<p>Aber ich hab ihn lieb.</b></p>
 	<a href="https://google.com" target="_blank" title="let's go to google">click me!</a>
 	<p>My name is:<br>
 	Kitty Cat</p>
